fixed alignment and added footer sprite image

--- a/drupal_site_7/themes/nexus/style.css
+++ b/drupal_site_7/themes/nexus/style.css
@@ -590,6 +590,11 @@ a.frmore:nth-child(6){
 }
 .block-center{
     text-align: center;
+    float:left;
+}
+.footer_container{
+    max-width:800px;
+    margin: 0 auto;
 }
 .footer-block .block > h2{
   font-size: 16px;
@@ -612,6 +617,35 @@ a.frmore:nth-child(6){
   
 }*/
 /* Footer */
+img.ucla{
+     width: 130px;
+    height: 65px;
+    background: url(images/livingstone_footer_sprite.png) -1px -2px;
+}
+
+img.nts{
+     width: 130px;
+    height: 65px;
+    background: url(images/livingstone_footer_sprite.png) -130px -2px;
+}
+
+img.neh{
+     width: 245px;
+    height: 65px;
+    background: url(images/livingstone_footer_sprite.png) -254px -2px;
+}
+
+img.nls{
+     width: 130px;
+    height: 65px;
+    background: url(images/livingstone_footer_sprite.png) -492px -2px;
+}
+
+img.unl{
+     width: 130px;
+    height: 65px;
+    background: url(images/livingstone_footer_sprite.png) -608px -2px;
+}
 
 .site-footer{
   padding: 10px 0px;
