--- a/drupal_site_7/themes/nexus/style_section.css
+++ b/drupal_site_7/themes/nexus/style_section.css
@@ -273,18 +273,20 @@ a:focus {
 
 #masthead{
   position: relative;
-  margin: 20px 50px 0px 0px;
- 
+  
 }
 #parent{
   position: relative;
 }
 .site-branding{
+    margin-top: 12px;
   margin-bottom: 20px;
+  
 }
 #site-logo {
   float: left;
   padding: 15px 15px 0 0;
+  width:30%;
 }
 h1#site-title{
   text-transform: uppercase;
@@ -335,8 +337,14 @@ h1#site-title a:link, h1#site-title a:visited{
         float:left;
     }
 #main-menu {
-  padding:0px 10px; 
-  border-bottom: none;  
+  padding: 0px 0px;
+
+border-bottom: none;
+float: right;
+}
+.mainmenu{
+    float:left;
+    width:70%;
 }
 .first_menu{
     width:900px;
@@ -347,11 +355,16 @@ h1#site-title a:link, h1#site-title a:visited{
 }
 #main-menu ul {
  
-  float:right;
-  list-style: none;
-  margin: 10px 0px 10px 0px;
-  padding: 0 0px;
-  height: 35px;
+  width: auto;
+float: left;
+list-style: none;
+margin-bottom:0px;
+margin-top:0px;
+/*margin-right: -60px;
+margin-top: 0px;
+margin-bottom:0px;
+margin-left:0px;
+padding: 0 0px;*/
 }
 
 #search-block-form input[type=text]{
@@ -359,19 +372,25 @@ h1#site-title a:link, h1#site-title a:visited{
 }
 #main-menu li {
   float: left;
-  list-style: none;
-  margin: 0;
-  padding: 0;  
-  font-weight:400;
+list-style: none;
+
+
+}
+#main-menu li {
+    padding: 0.2em 0.5em 0px 0px;
+margin: 0px;
+   /* padding-left:10px;
+    padding-right:5px;*/
 }
   
 #main-menu li a {
  
-  display: block;
-  margin: 0;
-  text-align: center;
-  text-decoration: none;
-  position: relative;
+  color: #777;
+display: block;
+margin: 0;
+/*padding: 19px 10px 19px 10px;*/
+text-decoration: none;
+position: relative;
 }
 
 #main-menu li a:hover, #main-menu li a:active, #main-menu a.active, #main-menu > ul > li > a.active-trail {
@@ -476,6 +495,11 @@ img.grayscale {
   filter: gray; /* IE6-9 */
   -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
+#page{
+    max-width:1260px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .border_section_basic{
     border-width: 6px;
     border-style: solid;
@@ -522,27 +546,30 @@ img.grayscale {
 } 
 
 .content_main{
-position:absolute;
+    width: 600px;
+margin: -8px auto 100px;
+/*position:absolute;
 top:100px;
 left: 90px; 
-right:90px;
+right:90px;*/
 }
 .content_section{
 
-margin: 0px 40px 0px 40px;
+/*margin: 0px 40px 0px 40px;*/
 
 }
 .flex-caption{
-position:absolute;
-top:50px;
-left: 120px;
+
   color: #000;
   font-weight: 900;
 font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-float:left;
-width:350px;
+cursor:pointer;
+margin-top:5px;
 
 } 
+.flex-caption a{
+    color:#000;
+}
 
 .header_title_region{
 text-align: center;
@@ -550,7 +577,8 @@ text-align: center;
   font-weight: 900;
 font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 cursor:pointer;
-
+margin-left:10px;
+margin-right:10px;
 }
 
 
@@ -626,12 +654,20 @@ font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 } 
   
 .flex-caption h2{
+    
+   color: #000;
+    font-size: 2.8em;
+    font-weight: 900;
+    letter-spacing: -1px;
+    line-height: 120%;
+    text-transform: uppercase;
+    /*
   text-transform: uppercase;
   font-size: 35px;
   font-weight: 900;
   color: #000;
   letter-spacing:-1px;
-  line-height:120%;
+  line-height:120%;*/
 }
 
 .flex-caption h2 a:link, .flex-caption h2 a:visited{
@@ -639,17 +675,21 @@ font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 .flex-caption p{
-  font-size: 17px;
+    font-size: 1.32em;
+font-weight: 900;
+letter-spacing: -1px;
+line-height: 120%;
+  /*font-size: 17px;
    font-weight: 900;
    letter-spacing:-1px;
-   line-height:120%;
+   line-height:120%;*/
 }
 .header_title_region h2{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .header_title_region h2{
   text-transform: uppercase;
-  font-size: 2.5em;
+  font-size: 2.8em;
   font-weight: 900;
   color: #000;
   letter-spacing:-1px;
@@ -661,7 +701,7 @@ font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 .header_title_region p{
-  font-size: 1.21em;
+  font-size: 1.32em;
    font-weight: 900;
    letter-spacing:-1px;
    line-height:120%;
@@ -673,7 +713,7 @@ a.frmore{
  
   display: block;  
   color: #000;
-  width: 120px;
+  width: 130px;
   /*border: 1px solid #000;
   padding: 2px 2px 2px 2px;*/
   margin: 10px 0px 10px 10px;
@@ -789,6 +829,7 @@ a.frmore:nth-child(6){
   font-weight: bold;
   margin-bottom: 20px;
   margin-top: 10px;
+  text-align:center;
 }
 
 #content .node-teaser {
@@ -1405,10 +1446,14 @@ border-radius: 7px;
 -moz-border-radius: 7px;
 -webkit-border-radius: 7px;
 }
-#search-block-form .search {
-margin-top: 3px;
-/*padding: 6px 15px 6px 30px;*/
+li .search {
+margin-top: 10px;
+margin-left: 30px;
 background: url('./images/search-button.png') no-repeat 1px 1px;
+}
+.external_menu .search{
+   margin-top: 3px;
+background: url('./images/search-button.png') no-repeat 1px 1px; 
 }
 .tftextinput4 {
 margin-top: 8px;
